<resources>
    <string name="app_name">HuenOh_ MAPD711_Assignment3</string>e

    // Titles for activities
    <string name="activity_title_main">Online Purchasing App</string>
    <string name="activity_title_productList">Product List</string>
    <string name="activity_title_productDetails">Product Details</string>
    <string name="activity_title_orderList">Order List</string>
    <string name="activity_title_orderDetails">Order Details</string>
    <string name="activity_title_orderEdit">Order Edit</string>
    <string name="activity_title_profile">Profile</string>

    // Login activity
    <string name="login_userName">User Name</string>
    <string name="login_password">Password</string>
    <string name="login_rememberPassword">Remember Password</string>
    <string name="login_login">Log In</string>
    <string name="login_customer">Customer</string>
    <string name="login_admin">Admin</string>

    // status of the order
    <string name="status_inProgress">In-Process</string>
    <string name="status_onDelivery">Delivery</string>


    // profile
    <string name="profileFirstName">First Name</string>
    <string name="profileLastName">Last Name</string>
    <string name="profileEmail">Email</string>
    <string name="profilePhone">Phone</string>
    <string name="profileAddress">Address</string>
    <string name="profileCity">City</string>
    <string name="profilePostalCode">Postal Code</string>

    // product
    <string name="productName">Name: </string>
    <string name="productPrice">Price: </string>
    <string name="productQuantity">Quantity: </string>
    <string name="productCategory">Category: </string>

    // order
    <string name="orderPersonalInformation">Personal Information"</string>
    <string name="orderInformation">Order Information</string>
    <string name="orderName">Name: </string>
    <string name="orderEmail">Email: </string>
    <string name="orderPhone">Phone: </string>
    <string name="orderAddress">Address: </string>
    <string name="orderCity">City: </string>
    <string name="orderPostalCode">Postal Code: </string>
    <string name="orderStatus">Status: </string>


    // Array for order status
    <string-array name="orderStatus">
        <item>In-Process</item>
        <item>Delivery</item>
    </string-array>

    // button
    <string name="btnOrder">Order</string>
    <string name="btnUpdate">Update</string>
    <string name="btnConfirmOrder">Confirm Order</string>

    // Strings for validations
    <string name="digits_alphabetsOnly">abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ</string>
    <string name="digits_alphabetsOnlyS">a bcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ</string>
    <string name="digits_address">1234567890,.-a bcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ</string>
    <string name="digits_phone">1234567890+-</string>
    <string name="digits_email">1234567890.-@abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ</string>
    <string name="digits_alphabetsNumbers">abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ1234567890</string>
    <string name="digits_alphabetsNumbersS">a bcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ1234567890</string>


    // string for dummy
    <string name="dummy">Dummy</string>
    <string name="dummy_description">The iPhone is a smartphone made by Apple that combines a computer, iPod, digital camera and cellular phone into one device with a touchscreen interface. The iPhone runs the iOS operating system (OS), and as of 2017, there were 2.2 million apps available for it through the Apple App Store, according to Statistic.</string>



</resources>
