<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    tools:context=".MainActivity">

    <TableRow>

        <TextView
            android:width="120dp"
            android:text="@string/login_userName" />

        <EditText
            android:id="@+id/txtUserName"
            android:width="200dp" />
    </TableRow>

    <TableRow>

        <TextView android:text="@string/login_password" />

        <EditText
            android:id="@+id/txtPassword"
            android:password="true" />
    </TableRow>

    <TableRow>

        <TextView />

        <CheckBox
            android:id="@+id/chkRememberPassword"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_rememberPassword" />
    </TableRow>

    <TableRow>

        <Button
            android:id="@+id/btnSignIn"
            android:text="@string/login_login" />
    </TableRow>


</TableLayout>