<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ProductDetailsActivity">


    <TextView
        android:id="@+id/itemName"
        style="@style/text_defaultLabel.bold"
        android:text="@string/dummy" />

    <TextView
        android:id="@+id/itemDescription"
        style="@style/text_defaultLabel"
        android:text="@string/dummy"/>


    <LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/text_defaultLabel.bold"
            android:text="@string/productPrice" />

        <TextView
            android:id="@+id/itemPrice"
            style="@style/text_defaultLabel.bold"
            android:text="@string/dummy"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/text_defaultLabel.bold"
            android:text="@string/productQuantity" />

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/quantitySpinner"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"/>
    </LinearLayout>


    <Button
        style="@style/btn_default"
        android:layout_width="170dp"
        android:text="@string/btnOrder"
        android:textColor="#F44336"
        android:onClick="onClickButton"/>

</LinearLayout>